31_minesweeper/grade.txt
Grading at Fri Jun 19 15:26:32 UTC 2020
Attempting to compile minesweeper.c
minesweeper.c:65:3: error: expected identifier or ‘(’ before ‘return’
   return NULL;
   ^
minesweeper.c:66:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
minesweeper.c:208:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
The code did not compile!

Overall Grade: F
